# lidar-vs-visual-slam

./: .gitignore  COMMANDS.md  README.ko.md  README.md  SLAM_PLAN.md  STATUS.md
.playwright-mcp/: page-2026-05-13T06-17-13-739Z.yml  page-2026-05-13T06-17-54-184Z.yml  page-2026-05-13T06-19-06-478Z.yml  page-2026-05-13T06-19-56-146Z.yml  page-2026-05-13T06-20-26-008Z.yml  page-2026-05-13T06-20-49-874Z.yml  page-2026-05-13T06-21-01-603Z.yml  page-2026-05-13T06-21-33-530Z.yml  page-2026-05-13T06-22-15-674Z.yml  page-2026-05-13T06-23-42-436Z.yml  page-2026-05-13T06-24-23-494Z.yml  page-2026-05-13T06-24-43-927Z.yml  page-2026-05-13T06-25-39-326Z.yml  page-2026-05-13T06-34-56-797Z.yml  page-2026-05-13T06-36-48-847Z.yml  page-2026-05-13T06-40-31-451Z.yml  page-2026-05-13T06-49-22-272Z.yml  page-2026-05-13T06-54-28-939Z.yml  page-2026-05-13T07-06-12-144Z.yml  page-2026-05-13T07-06-57-674Z.yml  page-2026-05-13T07-18-21-230Z.yml  page-2026-05-13T07-18-45-414Z.yml
dashboard/: README.md  app.js  html.pen  index.html  server.py  styles.css  test_server_profiles.py
docs/: GO2_REFERENCE.md  RUNBOOK.md  TROUBLESHOOTING.md
docs/adr/: 001-slam-tool-selection.md
maps/backups/active_20260513_142225/: rtabmap.db
src/go2_rtabmap_bridge/: package.xml  setup.cfg  setup.py
src/go2_rtabmap_bridge/go2_rtabmap_bridge/: bridge_node.py
src/go2_rtabmap_launch/: package.xml  setup.cfg  setup.py
src/go2_rtabmap_launch/config/: rtabmap_lidar_indoor.yaml
src/go2_rtabmap_launch/launch/: localization.launch.py  slam.launch.py
src/go2_rtabmap_launch/test/: test_localization_defaults.py
